# finance_app

./: .env  .gitignore  main.py  pyproject.toml
src/: session.py
src/api/crypt/: coin_value.py
src/api/currencies/: course_value.py
src/app/: router.py
src/app/components/bottom_sheet/: bottom_sheet.py
src/app/components/button/: filled_tonal_button_reg.py  reg_button.py
src/app/components/button/icon_btn/: icon_btn.py
src/app/components/chech_box/: checkbox_reg.py
src/app/components/dialog/: dialog_to_update_user_password.py  dialog_to_update_user_photo.py  dialog_to_update_username.py
src/app/components/dropdown/: drop_down_gen.py
src/app/components/field/: registration_field.py
src/app/components/menu/: menu_application.py
src/app/components/text/: text_error.py
src/app/pages/: page_fabric.py
src/app/pages/auth/: applicatin_registration.py  application_auth.py
src/app/pages/main/: course_crypt.py  course_value.py  directory.py  general_page.py  settings.py
src/auth/: auth.py  hash.py
src/db/: abs_mongo.py  engine.py
src/db/dto/: history_dto.py  user_dto.py
src/db/services/: history_service.py  user_service.py
src/settings/: application_settings.py  auth_setting.py  auth_settings.py  db_settings.py  registration_page_settings.py
