[tool.poetry]
name = "finance_app"
version = "0.1.0"
description = ""
authors = ["darkfos82 <darkfos82@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.23.1"
aiohttp = "^3.9.5"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
